group 'io.github.prashant-ramcharan'
version '1.2.0'

apply plugin: 'java'
apply plugin: 'maven-publish'

compileJava {
    sourceCompatibility = 1.8
    targetCompatibility = 1.8
}

repositories {
    jcenter()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.11'
    compile 'info.cukes:cucumber-core:1.2.5'
    compile 'info.cukes:cucumber-java:1.2.5'
    compile 'info.cukes:cucumber-java8:1.2.5'
    compile 'info.cukes:cucumber-junit:1.2.5'
}

task buildJar(type: Jar, dependsOn: classes) {
    classifier = 'sources'
    from sourceSets.main.allSource
}

artifacts {
    archives buildJar
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            artifact buildJar
        }
    }
}